--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Orçamentos</a>
+      <a mat-list-item routerLink="/quotation" >Orçamentos</a>
       <a mat-list-item href="#">Clientes</a>
       <a mat-list-item href="#">Produtos</a>
       <a mat-list-item href="#">Fichas Técnicas</a>
