added standard pages css and html and fixed nav bar error

--- a/src/app/modules/quotation/pages/quotation/quotation.component.html
+++ b/src/app/modules/quotation/pages/quotation/quotation.component.html
@@ -1,1 +1,16 @@
-<p>quotation works!</p>
+!DOCTYPE HTML>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+    <title>Propriedades de background em CSS - Linha de Código</title>
+     <!-- Aqui chamamos o nosso arquivo css externo -->
+    <link rel="stylesheet" type="text/css"  href="quotation.component.css" />
+</head>
+<body>
+  <div class="box">
+    <h1>quotation works!!</h1>
+  </div>
+    <div id="teste">
+  </div>
+</body>
+</html>
