--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -1,17 +1,20 @@
 .sidenav-container {
-  height: 100%;
+  height: 8%;
+  background: black;
 }
 
 .sidenav {
   width: 200px;
+  background: black;
 }
 
 .sidenav .mat-toolbar {
-  background: inherit;
+  background: black;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+  background: black;
 }
