Fixed main nav issue

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -24,6 +24,6 @@
       </button>
       <span>Ricardo Hamdan Cozinha Árabe Catering</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
