fixed some bugs in other modules and add product form front

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -6,9 +6,8 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/quotation" >Orçamentos</a>
-      <a mat-list-item href="#">Clientes</a>
       <a mat-list-item routerLink="/products">Produtos</a>
-      <a mat-list-item href="#">Fichas Técnicas</a>
+      <a mat-list-item href="/new-product">Novo Produto</a>
       <a mat-list-item href="#">Analítico</a>
     </mat-nav-list>
   </mat-sidenav>
