Event Types service done

--- a/src/app/modules/quotation/components/selected-product/selected-product.component.html
+++ b/src/app/modules/quotation/components/selected-product/selected-product.component.html
@@ -1,1 +1,7 @@
-<p #target>selected-product works!</p>
+<p>{{product.nome}}</p>
+
+<p>{{quantity}}</p>
+
+<p>{{product.unidadeMedida}}</p>
+
+<p>{{price}}</p>
