--- a/src/app/modules/new-product/pages/new-product.component.html
+++ b/src/app/modules/new-product/pages/new-product.component.html
@@ -1,28 +1,28 @@
 <div class="box">
-<div class="container">
-<form [attr.formGroup]="cadastroProduto" (ngSubmit)="postData();"> 
-   <h1>Cadastro de Novos Produtos</h1>
-   <div class="form-group">
-     <label for="nomeProduto">Nome do Produto</label>
-     <input type="text" class="form-control" id="nomeProduto" formControlName="nomeproduto">
-   </div>
-   <div class="form-group">
-    <label for="categoriaProduto">Categoria do Produto</label>
-    <input type="text" class="form-control" id="categoriaProduto" formControlName="categoriaproduto">
+  <div class="container">
+    <form [formGroup]="cadastroProduto">
+      <h1>Cadastro de Novos Produtos</h1>
+      <div class="form-group">
+        <label for="nomeProduto">Nome do Produto</label>
+        <input type="text" class="form-control" id="nomeProduto" formControlName="nomeProduto">
+      </div>
+      <div class="form-group">
+        <label for="categoriaProduto">Categoria do Produto</label>
+        <input type="text" class="form-control" id="categoriaProduto" formControlName="categoriaProduto">
+      </div>
+      <div class="form-group">
+        <label for="unidadeMedida">Unidade(Kg, L, uni)</label>
+        <input type="text" class="form-control" id="unidadeMedida" formControlName="unidadeMedida">
+      </div>
+      <div class="form-group">
+        <label for="precoProduto">Preço do Produto</label>
+        <input type="number" class="form-control" id="precoProduto" formControlName="precoProduto">
+      </div>
+      <div class="form-group">
+        <label for="estoqueProduto">Estoque Atual</label>
+        <input type="number" class="form-control" id="estoqueProduto" formControlName="estoqueProduto">
+      </div>
+      <button type="button" class="btn btn-primary" (click)="postData()">Cadastrar</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="unidadeMedida">Unidade(Kg, L, uni)</label>
-    <input type="text" class="form-control" id="unidadeMedida" formControlName="unidademedida">
-  </div>
-  <div class="form-group">
-    <label for="precoProduto">Preço do Produto</label>
-    <input type="text" class="form-control" id="precoProduto" formControlName="precoproduto">
-  </div>
-  <div class="form-group">
-    <label for="estoqueProduto">Estoque Atual</label>
-    <input type="text" class="form-control" id="estoqueProduto" formControlName="estoqueproduto">
-  </div>
-    <button type="submit" class="btn btn-primary">Cadastrar</button>
- </form>
-</div>
 </div>
