--- a/src/app/modules/new-product/pages/new-product.component.html
+++ b/src/app/modules/new-product/pages/new-product.component.html
@@ -1,28 +1,37 @@
 <div class="box">
   <div class="container">
-    <form [formGroup]="cadastroProduto">
+    <form class="col-6" [formGroup]="cadastroProduto" (change)="saved = false">
       <h1>Cadastro de Novos Produtos</h1>
       <div class="form-group">
-        <label for="nomeProduto">Nome do Produto</label>
-        <input type="text" class="form-control" id="nomeProduto" formControlName="nomeProduto">
+        <label for="nome">Nome do Produto</label>
+        <input type="text" class="form-control" id="nome" formControlName="nome">
       </div>
       <div class="form-group">
-        <label for="categoriaProduto">Categoria do Produto</label>
-        <input type="text" class="form-control" id="categoriaProduto" formControlName="categoriaProduto">
+        <label for="categoria">Categoria do Produto</label>
+        <select class="form-control" id="categoria" formControlName="categoria">
+          <option selected disabled hidden [value]="null">Selecione uma opção</option>
+          <option *ngFor="let category of categories" [value]="category.categoriaProduto">{{ category.categoriaProduto }}</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="unidadeMedida">Unidade(Kg, L, uni)</label>
-        <input type="text" class="form-control" id="unidadeMedida" formControlName="unidadeMedida">
+        <label for="unidadeMedida">Unidade</label>
+        <select class="form-control" id="unidadeMedida" formControlName="unidadeMedida">
+          <option selected disabled hidden [value]="null">Selecione uma opção</option>
+          <option *ngFor="let measurementUnit of measurementUnitOptions" [value]="measurementUnit.unidadeMedida">{{ measurementUnit.unidadeMedida }}</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="precoProduto">Preço do Produto</label>
-        <input type="number" class="form-control" id="precoProduto" formControlName="precoProduto">
+        <label for="precoProdutoUnitario">Preço do Produto</label>
+        <input type="number" class="form-control" id="precoProdutoUnitario" formControlName="precoProdutoUnitario">
       </div>
       <div class="form-group">
-        <label for="estoqueProduto">Estoque Atual</label>
-        <input type="number" class="form-control" id="estoqueProduto" formControlName="estoqueProduto">
+        <label for="quantidadeEstoque">Estoque Atual</label>
+        <input type="number" class="form-control" id="quantidadeEstoque" formControlName="quantidadeEstoque">
       </div>
-      <button type="button" class="btn btn-primary" (click)="postData()">Cadastrar</button>
+      <button type="button" class="btn btn-primary" (click)="postData()" [disabled]="cadastroProduto.invalid">Cadastrar</button>
+      <span *ngIf="saved">
+        Salvo com sucesso
+      </span>
     </form>
   </div>
 </div>
