New quotation feature done

--- a/src/app/modules/quotation/components/selected-product/selected-product.component.html
+++ b/src/app/modules/quotation/components/selected-product/selected-product.component.html
@@ -1,7 +1,7 @@
-<p>{{product.nome}}</p>
+<p>{{item.product.nome}}</p>
 
-<p>{{quantity}}</p>
+<p>{{item.quantity}}</p>
 
-<p>{{product.unidadeMedida}}</p>
+<p>{{item.product.unidadeMedida}}</p>
 
-<p>{{price}}</p>
+<p>{{item.price}}</p>
