add new customer feature

--- a/src/app/modules/products/pages/products/products.component.html
+++ b/src/app/modules/products/pages/products/products.component.html
@@ -1,3 +1,5 @@
+<a href="/new-product" class="button">Novo Produto</a>
+
 <div class="mat-elevation-z8">
   <table mat-table #table class="data-table" [dataSource]="dataSource.data" matSort aria-label="Elements">
     <!-- Id Column -->
