--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -7,8 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/quotation" >Orçamentos</a>
       <a mat-list-item routerLink="/products">Produtos</a>
-      <a mat-list-item href="/new-product">Novo Produto</a>
-      <a mat-list-item href="#">Analítico</a>
+      <a mat-list-item href="/new-customer">Clientes</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
