--- a/src/app/modules/new-product/pages/new-product.component.html
+++ b/src/app/modules/new-product/pages/new-product.component.html
@@ -25,4 +25,7 @@
     <button type="submit" class="btn btn-primary">Cadastrar</button>
  </form>
 </div>
+
+<a href="/products" class="button">Voltar</a>
+
 </div>
