--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/quotation" >Orçamentos</a>
-      <a mat-list-item href="#">Clientes</a>
+      <a mat-list-item routerLink="/customers">Clientes</a>
       <a mat-list-item routerLink="/products">Produtos</a>
       <a mat-list-item href="#">Fichas Técnicas</a>
       <a mat-list-item href="#">Analítico</a>
