Quotation feature logic done

--- a/src/app/modules/quotation/components/selected-product/selected-product.component.html
+++ b/src/app/modules/quotation/components/selected-product/selected-product.component.html
@@ -1,7 +1,7 @@
-<p>{{item.product.nome}}</p>
+<p>{{item.product?.nome}}</p>
 
 <p>{{item.quantity}}</p>
 
-<p>{{item.product.unidadeMedida}}</p>
+<p>{{item.product?.unidadeMedida}}</p>
 
 <p>{{item.price}}</p>
