--- a/src/app/modules/customers/pages/customers/customers.component.css
+++ b/src/app/modules/customers/pages/customers/customers.component.css
@@ -1,4 +1,18 @@
 .data-table, #paginator{
   width: 80%;
-  margin-left: 250px;
+  margin-left: 200px;
+}
+
+
+.button {
+  background-color:#343a40;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
