--- a/src/app/modules/new-customer/pages/new-customer.component.css
+++ b/src/app/modules/new-customer/pages/new-customer.component.css
@@ -1,3 +1,18 @@
 .box {
-    margin-top: 70px;
-  }
+  margin-top: 70px;
+  margin-left: 200;
+}
+
+
+.button {
+  background-color:#343a40;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
