--- a/src/app/modules/quotation/pages/new-quotation/new-quotation.component.html
+++ b/src/app/modules/quotation/pages/new-quotation/new-quotation.component.html
@@ -26,71 +26,99 @@
             >
         </div>
 
-        <input 
-            type="datetime-local"
-            placeholder="Data e hora"
-            formControlName="dataEvento"
-        >
+        <div class="form-group">
+            <input 
+                type="datetime-local"
+                placeholder="Data e hora"
+                formControlName="dataEvento"
+                class="form-control"
+            >
+        </div>
 
-        <input
-            type="number"
-            placeholder="Nº Pessoas"
-            formControlName="quantidadePessoas"
-        >
+        <div class="form-group">
+            <input
+                type="number"
+                placeholder="Nº Pessoas"
+                class="form-control"
+                formControlName="quantidadePessoas"
+            >
+        </div>
 
-        <select formControlName="tipoEvento">
-            <option selected disabled hidden>Selecione o tipo de evento</option>
-                <option 
-                    *ngFor="let event of eventTypes"
-                    [value]="event.tipoEvento"
-                >
-                    {{ event.tipoEvento }}
-                </option>
-        </select>
+        <div class="form-group">     
+            <select formControlName="tipoEvento" class="form-control">
+                <option selected disabled hidden>Selecione o tipo de evento</option>
+                    <option 
+                        *ngFor="let event of eventTypes"
+                        [value]="event.tipoEvento"
+                    >
+                        {{ event.tipoEvento }}
+                    </option>
+            </select>
+        </div>
 
         <br>
         <p>Itens</p>
         <br>
-        <div class="select-product">
-            <select (change)="productSelected($event)">
-                <option selected disabled hidden>Selecione um produto</option>
-                <option 
-                    *ngFor="let product of products; let i = index"
-                    [value]="product.id"
-                >
-                    {{ product.nome }}
-                </option>
-            </select>
+
+        <div class="form-group">
+            <div class="select-product">
+                <select (change)="productSelected($event)" class="form-control">
+                    <option selected disabled hidden>Selecione um produto</option>
+                    <option 
+                        *ngFor="let product of products; let i = index"
+                        [value]="product.id"
+                    >
+                        {{ product.nome }}
+                    </option>
+                </select>
+        </div>
+
+        <div class="form-group">
             <input 
                 type="number" 
                 placeholder="Quantidade" 
                 [ngModelOptions]="{standalone: true}"
                 [(ngModel)]="selectedQuantity"
+                class="form-control"
             >
+        </div>
             <p>{{ currentProduct !== null ? currentProduct.unidadeMedida : '' }}</p>
             <p>{{ currentProduct !== null ? (currentProduct.precoProdutoUnitario * selectedQuantity) : '' }}</p>
-            <button (click)="handleSelectedProduct()">Adicionar</button>
+            <button (click)="handleSelectedProduct()" class="btn btn-secondary">Adicionar</button>
         </div>
         <div #target></div>
         <p>Preço total: {{ totalPrice }}</p>
-        Desconto:
-        <input 
-            type="number"
-            (change)="calculateFinalPrice()"
-            formControlName="valorDesconto"
-        >
-        Taxa deslocamento:
-        <input 
+
+        <div class="form-group">
+            <label for="desconto">Desconto:</label>
+
+            <input 
+                type="number"
+                id="desconto"
+                (change)="calculateFinalPrice()"
+                formControlName="valorDesconto"
+                class="form-control"
+            >
+        </div>
+
+        <div class="form-group">
+            <label for="desconto">Taxa de deslocamento:</label>
+
+            <input  
             type="number"
             (change)="calculateFinalPrice()"
             formControlName="taxaDeslocamento"
+            class="form-control"
         >
+        </div>
+
         <p>Preço final: {{ finalPrice }}</p>
 
         <button 
             type="submit" 
             (click)="handleSubmit()"
             [disabled]="newQuotation.invalid"
+            class="btn btn-secondary"
         >Enviar</button>
     </form>
 </div>
