--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -1,6 +1,6 @@
 .sidenav-container {
   height: 100%;
-  background: rgb(190, 64, 64);
+  background-color: #F8F9F9 ;
 }
 
 .sidenav {
@@ -17,4 +17,9 @@
   top: 0;
   z-index: 1;
   background: black;
+  height:15vh;
+}
+
+.mat-drawer-container {
+  color:black;
 }
