--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -21,7 +21,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Ricardo Hamdan Cozinha Árabe Catering</span>
+      <img src="../../assets/logo.jpg" width="15%">
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
