--- a/src/app/modules/quotation/pages/new-quotation/new-quotation.component.html
+++ b/src/app/modules/quotation/pages/new-quotation/new-quotation.component.html
@@ -4,92 +4,119 @@
         [formGroup]="newQuotation"
         (change)="saved = false"
     >
-        <div class="form-group">
-            <select formControlName="idCliente" class="form-control">
-                <option selected disabled hidden>Selecione o cliente</option>
-                    <option 
-                        *ngFor="let customer of customers"
-                        [value]="customer.id"
-                    >
-                        {{ customer.nome }}
-                    </option>
-            </select>
-        </div>
 
-        <div class="form-group">
-            <label for="endereco">Endereço</label>
-            <input
-                class="form-control"
-                type="text" 
-                id="endereco"
-                formControlName="enderecoEvento"
-            >
-        </div>
-
-        <div class="form-group">
-            <input 
-                type="datetime-local"
-                placeholder="Data e hora"
-                formControlName="dataEvento"
-                class="form-control"
-            >
-        </div>
-
-        <div class="form-group">
-            <input
-                type="number"
-                placeholder="Nº Pessoas"
-                class="form-control"
-                formControlName="quantidadePessoas"
-            >
-        </div>
-
-        <div class="form-group">     
-            <select formControlName="tipoEvento" class="form-control">
-                <option selected disabled hidden>Selecione o tipo de evento</option>
-                    <option 
-                        *ngFor="let event of eventTypes"
-                        [value]="event.tipoEvento"
-                    >
-                        {{ event.tipoEvento }}
-                    </option>
-            </select>
-        </div>
-
-        <br>
-        <p>Itens</p>
-        <br>
-
-        <div class="form-group">
-            <div class="select-product">
-                <select (change)="productSelected($event)" class="form-control">
-                    <option selected disabled hidden>Selecione um produto</option>
-                    <option 
-                        *ngFor="let product of products; let i = index"
-                        [value]="product.id"
-                    >
-                        {{ product.nome }}
-                    </option>
+        Cliente 
+        <hr>
+        <section class="row">
+            <div class="form-group mx-2">
+                <select formControlName="idCliente" class="form-control">
+                    <option selected disabled hidden>Selecione o cliente</option>
+                        <option 
+                            *ngFor="let customer of customers"
+                            [value]="customer.id"
+                        >
+                            {{ customer.nome }}
+                        </option>
                 </select>
-        </div>
+            </div>
+        
 
-        <div class="form-group">
-            <input 
-                type="number" 
-                placeholder="Quantidade" 
-                [ngModelOptions]="{standalone: true}"
-                [(ngModel)]="selectedQuantity"
-                class="form-control"
-            >
-        </div>
-            <p>{{ currentProduct !== null ? currentProduct.unidadeMedida : '' }}</p>
+            <div class="form-group mx-2">
+
+                <input
+                    class="form-control"
+                    type="text" 
+                    id="endereco"
+                    placeholder="Endereço"
+                    formControlName="enderecoEvento"
+                >
+            </div>
+        </section>
+
+        <section class="section-title">
+            Evento 
+            <hr>
+        </section>
+
+        <section class="row">
+            <div class="form-group mx-2">
+                <input 
+                    type="datetime-local"
+                    placeholder="Data e hora"
+                    formControlName="dataEvento"
+                    class="form-control"
+                >
+            </div>
+
+            <div class="form-group mx-2">
+                <input
+                    type="number"
+                    placeholder="Nº Pessoas"
+                    class="form-control"
+                    formControlName="quantidadePessoas"
+                >
+            </div>
+
+            <div class="form-group mx-2">     
+                <select formControlName="tipoEvento" class="form-control">
+                    <option selected disabled hidden>Selecione o tipo de evento</option>
+                        <option 
+                            *ngFor="let event of eventTypes"
+                            [value]="event.tipoEvento"
+                        >
+                            {{ event.tipoEvento }}
+                        </option>
+                </select>
+            </div>
+        </section>
+
+        <section class="section-title">
+            Itens 
+            <hr>
+        </section>
+
+        <label for="quantidade">Quantidade</label>
+        <section class="row">
+            <div class="form-group mx-2 col-4">
+                <div class="select-product">
+                    <select (change)="productSelected($event)" class="form-control">
+                        <option selected disabled hidden>Selecione um produto</option>
+                        <option 
+                            *ngFor="let product of products; let i = index"
+                            [value]="product.id"
+                        >
+                            {{ product.nome }}
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group col-4">
+                <div class="input-group">
+                    <input 
+                        type="number" 
+                        id="quantidade" 
+                        [ngModelOptions]="{standalone: true}"
+                        [(ngModel)]="selectedQuantity"
+                        class="form-control"
+                    >
+                    <div class="input-group-append">
+                        <span class="input-group-text">
+                            {{ currentProduct !== null ? currentProduct.unidadeMedida : '' }}
+                        </span>
+                    </div>
+                </div>
+            </div>
+
             <p>{{ currentProduct !== null ? (currentProduct.precoProdutoUnitario * selectedQuantity) : '' }}</p>
-            <button (click)="handleSelectedProduct()" class="btn btn-secondary">Adicionar</button>
-        </div>
+            <button (click)="handleSelectedProduct()" class="btn">Adicionar</button>
+
+        </section>
+
         <div #target></div>
         <p>Preço total: {{ totalPrice }}</p>
 
-        <div class="form-group">
+        <div class="form-group mx-2">
             <label for="desconto">Desconto:</label>
 
             <input 
@@ -101,7 +128,7 @@
             >
         </div>
 
-        <div class="form-group">
+        <div class="form-group mx-2">
             <label for="desconto">Taxa de deslocamento:</label>
 
             <input  
@@ -118,7 +145,7 @@
             type="submit" 
             (click)="handleSubmit()"
             [disabled]="newQuotation.invalid"
-            class="btn btn-secondary"
+            class="btn"
         >Enviar</button>
     </form>
 </div>
