--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -1,6 +1,7 @@
 .sidenav-container {
   height: 100%;
   background-color: #F8F9F9 ;
+  overflow-y: none;
 }
 
 .sidenav {
@@ -17,7 +18,7 @@
   top: 0;
   z-index: 1;
   background: black;
-  height:15vh;
+  height:6vh;
 }
 
 .mat-drawer-container {
