--- a/src/app/modules/quotation/pages/new-quotation/new-quotation.component.css
+++ b/src/app/modules/quotation/pages/new-quotation/new-quotation.component.css
@@ -1,16 +1,14 @@
 .new-quotation-container {
     margin:15px;
+    overflow-y: none;
 }
 
 .btn {
     background-color: rgb(190, 64, 64);
     color:white;
     height: 37px;
-}
-
-.single-row {
-    display: flex;
-    flex-direction: row;
+    margin-top: 28px;
+    margin-left: 20px;
 }
 
 input, label {
@@ -25,5 +23,16 @@ hr {
 
 .section-title {
     margin-top: 16px;
+    font-size: larger;
 }
+
+.price {
+    margin-top: 35px;
+    font-size: large;
+}
+
+.total-price {
+
+}
+
 
