--- a/src/app/modules/customers/pages/customers/customers.component.html
+++ b/src/app/modules/customers/pages/customers/customers.component.html
@@ -1,3 +1,5 @@
+<a href="/new-customer" class="button">Cadastrar novo cliente</a>
+
 <div class="mat-elevation-z8">
   <table mat-table #table class="data-table" [dataSource]="dataSource.data" matSort aria-label="Elements">
     <!-- Id Column -->
