Quoatation exibition page done

--- a/src/app/modules/quotation/pages/quotation.component.html
+++ b/src/app/modules/quotation/pages/quotation.component.html
@@ -13,7 +13,7 @@
         
             <p class="col-4">{{ quotation.tipoEvento }}</p>
         
-            <p class="col-4">{{ quotation.dataEvento }}<p>
+            <p class="col-4">{{ quotation.dataEvento | date }}<p>
         </section>
     </div>
 
