--- a/src/app/modules/quotation/pages/quotation.component.css
+++ b/src/app/modules/quotation/pages/quotation.component.css
@@ -11,7 +11,7 @@
 p {
     border: 1px solid;
     margin:none;
-    background-color: #212F3C;
+    background-color: #343a40;
     color: white;
     font-size: larger;
 }
