Fixed pages css and standardized buttons

--- a/src/app/modules/quotation/pages/edit-quotation/edit-quotation.component.html
+++ b/src/app/modules/quotation/pages/edit-quotation/edit-quotation.component.html
@@ -56,7 +56,7 @@
         <div class="row">
             <p class="col-3">{{quotation.nomeProduto}} </p>
             <p class="col-4">{{quotation.quantidade}} {{quotation.unidadeMedida}}</p>
-            <p class="col-4">{{ quotation.precoProdutoOrcado | number }}</p>
+            <p class="col-4"> R$ {{ quotation.precoProdutoOrcado | number }}</p>
         </div>
     </div>
 
