--- a/src/app/modules/customers/pages/customers/customers.component.css
+++ b/src/app/modules/customers/pages/customers/customers.component.css
@@ -1,6 +1,7 @@
 .data-table, #paginator{
-  width: 80%;
-  margin-left: 150px;
+  width: 90%;
+  margin: auto;
+  font-size: smaller;
 }
 
 
@@ -14,6 +15,6 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 20px;
   cursor: pointer;
 }
