--- a/src/app/modules/customers/pages/customers/customers.component.html
+++ b/src/app/modules/customers/pages/customers/customers.component.html
@@ -1,5 +1,7 @@
 
+<div class="d-flex justify-content-end">
 <a href="/new-customer" class="button">Novo cliente</a>
+</div>
 
 <div class="mat-elevation-z8">
   <table mat-table #table class="data-table" [dataSource]="dataSource.data" matSort aria-label="Elements">
@@ -15,31 +17,31 @@
       <td mat-cell *matCellDef="let row">{{row.nome}}</td>
     </ng-container>
 
-    <!-- Category Column -->
-    <ng-container matColumnDef="categoria">
+    <!-- Telefone Column -->
+    <ng-container matColumnDef="telefone">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Telefone</th>
       <td mat-cell *matCellDef="let row">{{row.telefone}}</td>
     </ng-container>
 
 
-    <!-- unidadeMedida Column -->
-    <ng-container matColumnDef="unidadeMedida">
+    <!-- cpf Column -->
+    <ng-container matColumnDef="cpf">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>CPF</th>
       <td mat-cell *matCellDef="let row">{{row.cpf}}</td>
     </ng-container>
 
-    <!-- precoProdutoUnitario Column -->
-    <ng-container matColumnDef="precoProdutoUnitario">
+    <!-- email Column -->
+    <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>E-mail</th>
       <td mat-cell *matCellDef="let row">{{row.email}}</td>
     </ng-container>
 
 
     <!-- quantidadeEstoque Column -->
-    <ng-container matColumnDef="quantidadeEstoque">
+    <!-- <ng-container matColumnDef="quantidadeEstoque">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Endereço</th>
       <td mat-cell *matCellDef="let row">{{row.endereco}}</td>
-    </ng-container>
+    </ng-container> -->
 
 
 
