--- a/src/app/modules/products/pages/products/products.component.html
+++ b/src/app/modules/products/pages/products/products.component.html
@@ -1,4 +1,6 @@
+<div class="d-flex justify-content-end">
 <a href="/new-product" class="button">Novo Produto</a>
+</div>
 
 <div class="mat-elevation-z8">
   <table mat-table #table class="data-table" [dataSource]="dataSource.data" matSort aria-label="Elements">
